# BurnMeter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  DEPLOY_RELAY.md  LICENSE  NAMING.md  PRICING.md  README.md  burnmeter-server.spec  pyproject.toml
.github/workflows/: build-macos.yml
burnmeter/: __init__.py  _proc.py  _worker.py  alerts.py  analytics.py  chat_titles.py  cli.py  codex_parser.py  desktop.py  firebase_config.py  firebase_sync.py  parser.py  pricing.py  server.py  statusline.py  sync.py  sync_relay.py  tray.py  updater.py  window.py
burnmeter/static/: dashboard.css  dashboard.html  dashboard.js  pricing.html
ccmeter/: __init__.py  _worker.py  analytics.py  cli.py  codex_parser.py  parser.py  pricing.py  server.py  statusline.py
ccmeter/static/: dashboard.css  dashboard.html  dashboard.js
docs/: SYNC.md  index.html  og.html
electron/: main.js  package-lock.json  package.json  preload.js
landing/: index.html
packaging/: build_exe.ps1  build_installer.ps1  build_mac.sh  build_server_exe.ps1  burnmeter_app.py  burnmeter_server.py  installer.iss  make_icon.py
static/: dashboard.css  dashboard.html  dashboard.js
tests/: dashboard_render.test.mjs  generate_fixture.py  test_alerts.py  test_chat_titles.py  test_codex_correctness.py  test_dashboard_render.py  test_firebase_sync.py  test_recent_activity.py  test_relay.py  test_smoke.py  test_sync.py  test_sync_naming.py  test_sync_snapshot.py  test_tray.py  test_window.py  test_window_singleton.py
