[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "burnmeter"
version = "0.1.3"
description = "Local-first dashboard for AI coding agent token usage & cost (Claude Code + OpenAI Codex)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Cihan Atak" }]
keywords = ["claude-code", "codex", "tokens", "cost", "burn-rate", "dashboard", "ai-coding", "usage"]
# Runtime is Python standard library ONLY — no third-party deps (Chart.js / GridStack are
# CDN-loaded in the browser). Keeps install instant and supply-chain surface zero.
dependencies = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities",
]

# Pro cross-device sync (E2E encryption) is the ONLY optional dependency, opt-in via
# `pip install burnmeter[sync]`. The free local core stays dependency-free.
[project.optional-dependencies]
sync = ["cryptography>=42"]

[project.urls]
Homepage = "https://github.com/cihanatak/BurnMeter"
Repository = "https://github.com/cihanatak/BurnMeter"
Issues = "https://github.com/cihanatak/BurnMeter/issues"

[project.scripts]
burnmeter = "burnmeter.cli:main"

[tool.setuptools]
# Bundle the dashboard assets WITH the package so a pip-installed burnmeter serves the UI.
packages = ["burnmeter"]

[tool.setuptools.package-data]
burnmeter = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
